--- a/core/src/main/res/layout/progress_item_view.xml
+++ b/core/src/main/res/layout/progress_item_view.xml
@@ -3,7 +3,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
-        style="@style/ProgressItemProgressBar"
+        style="@style/pbProgressItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
