--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_movie_backdrop_height"
             android:transitionName="@string/movie_backdrop_shared_element"
-            app:layout_constraintBottom_toTopOf="@id/llItemDetails"
+            app:layout_constraintBottom_toTopOf="@id/ctrItemDetails"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription"
             tools:src="@android:color/darker_gray" />
@@ -29,7 +29,7 @@
             tools:text="Avengers: Infinity War" />
 
         <LinearLayout
-            android:id="@+id/llItemDetails"
+            android:id="@+id/ctrItemDetails"
             style="@style/ctrItemDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
