[movies-16] refactor: Rename all strings to match android id convention
Also, this commit changed the underscore to a camel care convention for
all strings.

--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/spacing_l</item>
-        <item name="android:text">@string/error_loading</item>
+        <item name="android:text">@string/tvErrorItem</item>
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">@dimen/text_size_20</item>
     </style>
