--- a/core/src/main/res/layout/progress_item_view.xml
+++ b/core/src/main/res/layout/progress_item_view.xml
@@ -7,6 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/spacing_l" />
+        android:padding="@dimen/spacingL" />
 
 </merge>
