--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -12,7 +12,7 @@
             android:id="@+id/ivItemBackdrop"
             style="@style/ivItemBackdrop"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_movie_backdrop_height"
+            android:layout_height="@dimen/ivItemBackdropHeight"
             android:transitionName="@string/ivSharedElementMovie"
             app:layout_constraintBottom_toTopOf="@id/ctrItemDetails"
             app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
             android:id="@+id/tvItemTitle"
             style="@style/tvItemTitle"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_movie_backdrop_height"
+            android:layout_height="@dimen/tvItemTitleHeight"
             app:layout_constraintBottom_toBottomOf="@id/ivItemBackdrop"
             app:layout_constraintTop_toTopOf="@id/ivItemBackdrop"
             tools:text="Avengers: Infinity War" />
