--- a/feature/movies/src/main/res/layout/movies_activity.xml
+++ b/feature/movies/src/main/res/layout/movies_activity.xml
@@ -10,7 +10,7 @@
     <io.petros.movies.movies.toolbar.MoviesToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
+        android:layout_height="@dimen/toolbarHeight"
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
