--- a/feature/movies/src/main/res/values/styles.xml
+++ b/feature/movies/src/main/res/values/styles.xml
@@ -3,39 +3,39 @@
 <resources>
 
     <style name="RecyclerView">
-        <item name="android:layout_marginTop">@dimen/item_movie_space</item>
+        <item name="android:layout_marginTop">@dimen/cdItemVerticalMargin</item>
         <item name="android:scrollbars">vertical</item>
     </style>
 
     <!-- Toolbar -->
     <style name="ivToolbarFilterIcon">
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingEnd">10dp</item>
-        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">@dimen/spacingS</item>
+        <item name="android:paddingStart">@dimen/spacingS</item>
         <item name="android:src">@drawable/ic_filter</item>
     </style>
 
     <style name="ivToolbarCloseIcon">
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingEnd">10dp</item>
-        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">@dimen/spacingS</item>
+        <item name="android:paddingStart">@dimen/spacingS</item>
         <item name="android:src">@drawable/ic_close</item>
     </style>
 
     <style name="tvToolbarFilterYear">
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingEnd">16dp</item>
-        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">@dimen/spacingM</item>
+        <item name="android:paddingStart">@dimen/spacingM</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/textSizeXL</item>
     </style>
 
     <style name="tvToolbarFilterMonth">
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingEnd">10dp</item>
-        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">@dimen/spacingS</item>
+        <item name="android:paddingStart">@dimen/spacingS</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/textSizeXL</item>
     </style>
 
     <!-- Item -->
@@ -46,28 +46,28 @@
     <style name="tvItemTitle">
         <item name="android:background">@drawable/shape_gradient</item>
         <item name="android:gravity">start|bottom</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:padding">@dimen/spacingM</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">@dimen/textSizeXXL</item>
     </style>
 
     <style name="ctrItemDetails">
-        <item name="android:paddingBottom">8dp</item>
-        <item name="android:paddingLeft">16dp</item>
-        <item name="android:paddingRight">16dp</item>
-        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">@dimen/spacingS</item>
+        <item name="android:paddingLeft">@dimen/spacingM</item>
+        <item name="android:paddingRight">@dimen/spacingM</item>
+        <item name="android:paddingTop">@dimen/spacingS</item>
     </style>
 
     <style name="tvItemReleaseDate">
         <item name="android:gravity">start|center</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/textSizeL</item>
     </style>
 
     <style name="tvItemVote">
         <item name="android:gravity">end|center</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/textSizeL</item>
     </style>
 
 </resources>
