--- a/core/src/main/res/layout/progress_item_view.xml
+++ b/core/src/main/res/layout/progress_item_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="android.widget.FrameLayout">
 
     <ProgressBar
         style="@style/pbProgressItem"
