--- a/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
