[movies-22] test: Add missing ids on movies and movie details toolbars
This will be afterwards used for within the app instrumented test.

--- a/feature/movies/src/main/res/layout/movies_toolbar.xml
+++ b/feature/movies/src/main/res/layout/movies_toolbar.xml
@@ -11,6 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvToolbarMoviesLabel"
             style="@style/tvToolbarLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
