--- a/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
@@ -11,6 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvToolbarMovieDetailsLabel"
             style="@style/tvToolbarLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
