[movies-22] test: Add container res android id where it was missing
This android id will be then used by instrumentation tests.

--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -6,6 +6,7 @@
     tools:parentTag="androidx.cardview.widget.CardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ctrMovieItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
