--- a/feature/movies/src/main/res/layout/movies_toolbar.xml
+++ b/feature/movies/src/main/res/layout/movies_toolbar.xml
@@ -5,6 +5,7 @@
     tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
     <LinearLayout
+        android:id="@+id/ctrMoviesToolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
