--- a/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
@@ -5,6 +5,7 @@
     tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
     <LinearLayout
+        android:id="@+id/ctrMovieDetailsToolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
