[movies-23] feature: Replace card view with material card view
As part of this change the below occurred:
- The card view dependency was removed since it is no longer necessary.
- The 'radius' and 'cardElevation' settings was removed. The default
from the material card view will be used instead.

--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -3,7 +3,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="androidx.cardview.widget.CardView">
+    tools:parentTag="com.google.android.material.card.MaterialCardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ctrMovieItem"
