[movies-23] feature: Replace text view with material text view

--- a/core/src/main/res/layout/error_item_view.xml
+++ b/core/src/main/res/layout/error_item_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="android.widget.FrameLayout">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         style="@style/tvErrorItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
