--- a/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
@@ -11,7 +11,7 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarMovieDetailsLabel"
             style="@style/tvToolbarLabel"
             android:layout_width="wrap_content"
