--- a/feature/movies/src/main/res/layout/movies_toolbar.xml
+++ b/feature/movies/src/main/res/layout/movies_toolbar.xml
@@ -11,7 +11,7 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarMoviesLabel"
             style="@style/tvToolbarLabel"
             android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
             android:visibility="gone"
             tools:ignore="ContentDescription" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarFilterYear"
             style="@style/tvToolbarFilterYear"
             android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
             android:text="@string/tvToolbarFilterYear"
             android:visibility="invisible" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvToolbarFilterMonth"
             style="@style/tvToolbarFilterMonth"
             android:layout_width="wrap_content"
