--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivItemBackdrop"
             style="@style/ivItemBackdrop"
             android:layout_width="match_parent"
