[movies-23] feature: Migrate app theme to material components
Also, as part of this migration the 'DayNight' is introduce, which will
be responsible for adding the main dark theme functionality to the app.

--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -2,8 +2,12 @@
 
 <resources>
 
-    <color name="colorPrimary">#01d277</color>
-    <color name="colorPrimaryDark">#081c24</color>
-    <color name="colorAccent">#FF4081</color>
+    <!-- Theme -->
+    <color name="colorPrimary">@color/green_material_A700</color>
+    <color name="colorPrimaryVariant">@color/green_material_800</color>
+    <color name="colorSecondary">@color/pink_material_A200</color>
+    <color name="colorSecondaryVariant">@color/pink_material_A700</color>
+    <color name="colorBackground">@color/design_default_color_background</color>
+    <color name="colorOnBackground">@color/colorPrimary</color>
 
 </resources>
